modularized KMA index from database setup, and generalized kmeraligner to work for e.coli and c.diff

--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -5,6 +5,7 @@
 alignment_database: 
     db: setup_CdiffToxin
     kma_db_prefix: Cdiff_Toxin
+    kma_index_flag: Clostridioides_difficile_db_Toxin
 
 analyses_to_run: 
 
@@ -90,10 +91,10 @@ analyses_to_run:
         status : False
         
     skesa:
-        status : True
+        status : False
 
     Repeat_identifier:
-        status : True
+        status : False
         Title : Repeat identifier
         ID: 92
         repeats: TR6 TR10
@@ -101,35 +102,35 @@ analyses_to_run:
         database: resources/Clostridioides_difficile_db/TRST
 
     samtools_view:
-        status : True
+        status : False
         additional_option : -b -q 20 -F 4 
         # https://broadinstitute.github.io/picard/explain-flags.html
         # 4 (unmapped) + 256 (not primary alignment) + 512 (failed quality) + 1024 (duplicate) + 2048 (supplementary) = 3844
         # Consider removing reads which is not in proper pair #3844
 
     samtools_sort:
-        status : True
+        status : False
         additional_option : -n 
     
     samtools_idx:
-        status : True
+        status : False
 
     bcftools_view_filter:
-        status: True
+        status: False
         additional_option: -v indels -i 'INFO/DP>10'
         region: AM180355.1_tcdC_804309_805008
 
     bcftools_index:
-        status : True
+        status : False
     
     bcftools_mpileup:
-        status : True
+        status : False
     
     bcftools_call:
-        status : True
+        status : False
 
     Variant_detection:
-        status : True
+        status : False
         Title : Detecting variants for C.diff 
         ID: 93
         additional_option : --gene_list tcdC --organism "Clostridioides difficile" --suffix tsv
