--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -3,10 +3,36 @@
 # and associated parameters.
 
 alignment_database: 
-    db: setup_Ecoli_alignment_db
-    kma_db_prefix: ecoligenes
-    kma_index_flag: Escherichia_coli_db
-    fa_idx_flag: Escherichia_coli_db
+
+    kmeraligner:
+        db: setup_Ecoli_alignment_db
+        kma_db_prefix: ecoligenes
+        kma_index_flag: Escherichia_coli_db
+        fa_idx_flag: Escherichia_coli_db
+
+    plasmidfinder:
+        db: setup_PlasmidFinder
+        kma_index_flag: plasmidfinder_db
+
+    resfinder:
+        db: setup_ResFinder
+        kma_index_flag: resfinder_db
+
+    pointfinder:
+        db: setup_PointFinder
+        kma_index_flag: pointfinder_db
+
+    disinfinder:
+        db: setup_DisinFinder
+        kma_index_flag: disinfinder_db
+
+    virulencefinder:
+        db: setup_VirulenceFinder
+        kma_index_flag: virulencefinder_db
+
+    serotypefinder:
+        db: setup_SerotypeFinder
+        kma_index_flag: serotypefinder_db
 
 analyses_to_run: 
 
