--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -92,6 +92,20 @@ rule all:
             ]
         ),
         expand(
+            "%s/{sample}/spades/contigs.fasta" % OUT_FOLDER,
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["spades"]["status"] is True
+            ]
+        ),
+        expand(
+            "%s/{sample}/skesa/{sample}.contigs.fasta" % OUT_FOLDER,
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["skesa"]["status"] is True
+            ]
+        ),
+        expand(
             "%s/{sample}/emm_typing/" %OUT_FOLDER, 
             sample=[
                 s for s in SAMPLES 
@@ -141,12 +155,17 @@ rule all:
             ]
         ),
         expand(
-            "{out}/{sample}/AMRFinder", 
+            "%s/{sample}/AMRFinder/AMR_{assembler}_{sample}.tsv" %OUT_FOLDER,
             sample=[
-                s for s in SAMPLES 
+                s for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
                 if species_configs[sample_to_organism[s]]["analyses_to_run"]["amrfinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
+                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
+            ], # creates a list of samples needed to match with each assembly -> e.g ["SRR1", "SRR1", "SRR2", "SRR2"]
+            assembler=[
+                assembler for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["amrfinder"]["status"] is True
+                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
+            ] # creates a list of assembly tools needed to match with each sample -> e.g ["spades", "skesa","spades", "skesa"] to create all combinations of samples and assembly tools
         ),
         expand(
             "{out}/{sample}/MLST", 
@@ -155,20 +174,6 @@ rule all:
                 if species_configs[sample_to_organism[s]]["analyses_to_run"]["mlst"]["status"] is True
             ],
             out=OUT_FOLDER
-        ),
-        expand(
-            "%s/{sample}/spades/contigs.fasta" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["spades"]["status"] is True
-            ]
-        ),
-        expand(
-            "%s/{sample}/skesa/{sample}.contigs.fasta" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["skesa"]["status"] is True
-            ]
         ),
         expand(
             "%s/{sample}/Repeat_identifier/{assembler}_{sample}_repeat.tsv" % OUT_FOLDER,
