added seqsero2 salmonella specific tool and database

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -103,6 +103,11 @@ analysis_settings:
 
     Variant_identifier:
         yaml: ../envs/python_functions.yaml
+    
+    seqsero2:
+        yaml: ../envs/seqsero2.yaml
+        database: SeqSero2
+
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
     # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
