sistr too for salmonella typing added with database serovar list

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -108,6 +108,9 @@ analysis_settings:
         yaml: ../envs/seqsero2.yaml
         database: SeqSero2
 
+    sistr:
+        yaml : ../envs/sistr.yaml
+
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
     # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
