--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -183,3 +183,9 @@ analyses_to_run:
     seqsero2:
         status : False
         database : seqsero2
+    
+    sistr_cmd:
+        status : False
+        Title : Salmonella In Silico Typing Resource (SISTR)
+        additional_option: -f tab --qc
+        database : resources/Salmonella_enterica_db/serovar_list.txt
