--- a/workflow/configs_species/S.enterica.yaml
+++ b/workflow/configs_species/S.enterica.yaml
@@ -118,10 +118,10 @@ analyses_to_run:
         Title : MLST by Torsten Seeman
 
     spades:
-        status : False
+        status : True
     
     skesa:
-        status : False
+        status : True
 
     Repeat_identifier:
         status : False
@@ -175,3 +175,9 @@ analyses_to_run:
     seqsero2:
         status : True
         database : seqsero2
+    
+    sistr_cmd:
+        status : True
+        Title : Salmonella In Silico Typing Resource (SISTR)
+        additional_option: -f tab --qc
+        database : resources/Salmonella_enterica_db/serovar_list.txt
