--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -34,6 +34,9 @@ alignment_database:
         db: setup_SerotypeFinder
         kma_index_flag: serotypefinder_db
 
+    SRST2:
+        bowtie2_index_flag: MLST/Clostridium/
+
 analyses_to_run: 
 
     kmeraligner:
@@ -189,3 +192,10 @@ analyses_to_run:
         Title : Salmonella In Silico Typing Resource (SISTR)
         additional_option: -f tab --qc
         database : resources/Salmonella_enterica_db/serovar_list.txt
+
+    srst2:
+        status: False
+        species: clostridium
+        species_key: C.diff
+        scheme: Giffiths_MLST
+        genes: ["adk","atpA","dxr","glyA","recA","sodA","tpi"]
